blockml/test/errors/04_model/e48/e48m.model
model: e48m
joins:
- from_view: e48_one
  as: a

fields:
- measure: mea1
  type: min
  sql: ${a.mea2}     
   
